[tool.poetry]
name = "crypto_exchange"
version = "0.1.0"
description = ""
authors = ["Albert Pang <alpaalpa@mac.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ccxt = "^1.62.73"
munch = "^2.5.0"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
